chore(handler): add docs to capsule handlers
