# internal/handler/capsule.go
@@ -9,6 +9,20 @@ import (
 	"github.com/julienschmidt/httprouter"
 )
 
+// DeleteCapsule | Removes Capsule
+//
+//	@Summary      GetCapsule
+//	@Security     ApiKeyAuth
+//	@Description  Removes capsule
+//	@Tags         Capsules
+//	@Produce      json
+//	@Param        capsuleID    path      string true "capsuleID"
+//	@Success      204
+//	@Failure      401   {object}  errorResponse
+//	@Failure      403   {object}  errorResponse
+//	@Failure      404   {object}  errorResponse
+//	@Failure      500   {object}  errorResponse
+//	@Router       /api/v1/capsules/{capsuleID} [delete]
 func (h *handler) deleteCapsule(w http.ResponseWriter, r *http.Request, params httprouter.Params) {
 	userID, err := getUserID(r)
 	if err != nil {
@@ -31,6 +45,22 @@ func (h *handler) deleteCapsule(w http.ResponseWriter, r *http.Request, params h
 	return
 }
 
+// UpdateCapsule | Updates Capsule
+//
+//	@Summary      GetCapsule
+//	@Security     ApiKeyAuth
+//	@Description  Updates capsule
+//	@Tags         Capsules
+//	@Produce      json
+//	@Param        capsuleID    path      string true "capsuleID"
+//	@Param        input body      domain.UpdateCapsuleDTO true "input"
+//	@Success      204
+//	@Failure      400   {object}  errorResponse
+//	@Failure      401   {object}  errorResponse
+//	@Failure      403   {object}  errorResponse
+//	@Failure      404   {object}  errorResponse
+//	@Failure      500   {object}  errorResponse
+//	@Router       /api/v1/capsules/{capsuleID} [patch]
 func (h *handler) updateCapsule(w http.ResponseWriter, r *http.Request, params httprouter.Params) {
 	userID, err := getUserID(r)
 	if err != nil {
@@ -59,6 +89,20 @@ func (h *handler) updateCapsule(w http.ResponseWriter, r *http.Request, params h
 	return
 }
 
+// GetCapsule | Retrieves Capsule By ID
+//
+//	@Summary      GetCapsule
+//	@Security     ApiKeyAuth
+//	@Description  Retrieves capsule by ID
+//	@Tags         Capsules
+//	@Produce      json
+//	@Param        capsuleID    path      string true "capsuleID"
+//	@Success      200   {object}  domain.Capsule
+//	@Failure      401   {object}  errorResponse
+//	@Failure      403   {object}  errorResponse
+//	@Failure      404   {object}  errorResponse
+//	@Failure      500   {object}  errorResponse
+//	@Router       /api/v1/capsules/{capsuleID} [get]
 func (h *handler) getCapsuleByID(w http.ResponseWriter, r *http.Request, params httprouter.Params) {
 	userID, err := getUserID(r)
 	if err != nil {
@@ -82,6 +126,17 @@ func (h *handler) getCapsuleByID(w http.ResponseWriter, r *http.Request, params 
 	return
 }
 
+// GetCapsules | Retrieves All Capsules
+//
+//	@Summary      GetCapsules
+//	@Security     ApiKeyAuth
+//	@Description  Retrieves all capsules
+//	@Tags         Capsules
+//	@Produce      json
+//	@Success      200   {array}   domain.Capsule
+//	@Failure      401   {object}  errorResponse
+//	@Failure      500   {object}  errorResponse
+//	@Router       /api/v1/capsules [get]
 func (h *handler) getCapsules(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
 	userID, err := getUserID(r)
 	if err != nil {
@@ -99,6 +154,20 @@ func (h *handler) getCapsules(w http.ResponseWriter, r *http.Request, _ httprout
 	return
 }
 
+// CreateCapsule | Creates New Capsule
+//
+//	@Summary      CreateCapsule
+//	@Security     ApiKeyAuth
+//	@Description  Creates new capsule
+//	@Tags         Capsules
+//	@Accept       json
+//	@Produce      json
+//	@Param        input body      domain.CreateCapsuleDTO true "input"
+//	@Success      201   {object}  domain.Capsule
+//	@Failure      400   {object}  errorResponse
+//	@Failure      401   {object}  errorResponse
+//	@Failure      500   {object}  errorResponse
+//	@Router       /api/v1/capsules [post]
 func (h *handler) createCapsule(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
 	userID, err := getUserID(r)
 	if err != nil {
